# morningnewsai

./: .env.example  .gitignore  README.md  fileStructureMap.txt  projectPlan.md  projectWorkflow.txt  pyproject.toml  relevantAccounts.txt  usecasesForADK.txt
backend/: config_loader.py
backend/models/: __init__.py  article.py  briefing.py  common.py  preferences.py  source.py  topic.py
backend/retrieval/: query_builder.py  rss.py
backend/tests/: test_config_loader.py  test_models.py  test_query_builder.py  test_rss_retrieval.py
config/: default_topics.yaml  sources.yaml
